--- a/src/app/components/footer/footer.component.html
+++ b/src/app/components/footer/footer.component.html
@@ -17,7 +17,10 @@
             <div><a href="https://soundcloud.com/bohdansehin"><img src="../../../assets/soundcloud-logo.png" alt="" srcset=""></a></div>
             <div><a href="https://www.youtube.com/channel/UCK8ZrQlSd0ZvTHsUJpRAX7Q"><img src="../../../assets/youtube.png" alt="" srcset=""></a></div>
         </div>
-        <div id="footerCopyright">© <span>{{date | date: 'y'}}</span> Богдан Сегін. Всі права захищені.</div>
+        <div id="footerCopyright">© <span>{{date | date: 'y'}}</span> Богдан Сегін. Всі права захищені.
+            <div id="siteDeveloper">Розробник: <a href="https://nskrprogrammer.firebaseapp.com/" target="_blank">Назар Скрипник</a></div>
+            <div id="sitePhotographer">Фото: <a href="http://serhiyhorobets.com/en" target="_blank">Сергій Горобець</a></div>
+        </div>
     </div>
 </footer>
 
