--- a/src/app/pages/news/news.component.scss
+++ b/src/app/pages/news/news.component.scss
@@ -6,7 +6,7 @@
         background-color: white;
         padding: 20px 30px 100px 30px;
         .newsOne {
-            padding: 25px;
+            padding-bottom: 100px;
             .newsOneTitle {
                 color: brown;
             }
